// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> matches snapshot for \`multiple\` type 1`] = `
<div
  data-orientation="vertical"
>
  <div
    class="item"
    data-item="true"
    data-orientation="vertical"
    data-state="open"
  >
    <h3
      class="flex"
      data-orientation="vertical"
      data-state="open"
    >
      <button
        aria-controls="radix-:r3:"
        aria-expanded="true"
        class="focusable focus-invert flex f-grow t-medium reset trigger"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="open"
        id="radix-:r2:"
        type="button"
      >
        Trigger
        <svg
          aria-hidden="true"
          class="svg-icon icon"
          data-testid="chevron-icon"
          viewBox="0 0 12 12"
        >
          <path
            d="m3 7.5 3-3 3 3"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-:r2:"
      class="content"
      data-orientation="vertical"
      data-state="open"
      id="radix-:r3:"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
    >
      <div
        class="content-wrapper"
      >
        Content
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> matches snapshot for \`single\` type 1`] = `
<div
  data-orientation="vertical"
>
  <div
    class="item"
    data-item="true"
    data-orientation="vertical"
    data-state="open"
  >
    <h3
      class="flex"
      data-orientation="vertical"
      data-state="open"
    >
      <button
        aria-controls="radix-:r1:"
        aria-expanded="true"
        class="focusable focus-invert flex f-grow t-medium reset trigger"
        data-orientation="vertical"
        data-radix-collection-item=""
        data-state="open"
        id="radix-:r0:"
        type="button"
      >
        Trigger
        <svg
          aria-hidden="true"
          class="svg-icon icon"
          data-testid="chevron-icon"
          viewBox="0 0 12 12"
        >
          <path
            d="m3 7.5 3-3 3 3"
          />
        </svg>
      </button>
    </h3>
    <div
      aria-labelledby="radix-:r0:"
      class="content"
      data-orientation="vertical"
      data-state="open"
      id="radix-:r1:"
      role="region"
      style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width); transition-duration: 0s; animation-name: none;"
    >
      <div
        class="content-wrapper"
      >
        Content
      </div>
    </div>
  </div>
</div>
`;
